# particle-in-cell

./: AUTHORS  CMakeLists.txt  README.md  input.ini  makefile  pic  plot.py
data_test/files/: density_fixed.txt  ke_0.000000.txt
include/: collision.h  cross_sections.h  dft.h  domain.h  extrafun.h  field.h  iniparser.h  init.h  math.h  matplotlibcpp.h  output.h  species.h  world.h
inputfiles/: input - Copy (2).ini  input.ini  input0.ini  input1.ini  input2.ini  input3.ini  input4.ini  input5.ini  input_0_0.ini  input_0_1.ini  input_0_2.ini  input_0_3.ini  input_elastic.ini  input_epw.ini  input_epwi.ini  input_esw.ini  input_iaw.ini  input_iawi.ini  input_noelastic.ini  inputboti0.ini  inputboti3.ini
linearalgebra/: function.h  linalg.h  slap.h  solvers.h
python_scripts/: Efield_plot.py  analytic.py  analyticeib.py  analyticneg.py  combined_distribution.py  combined_distribution_compare.py  compare_phase.py  compare_pot.py  conserved.py  contour.py  contour_2s.py  data_process_npz.py  decay.py  density_plot.py  disp_test.py  dispersion-combined.py  dispersion-neg-beam.py  dispersion.py  dispersion_EF.py  dispersion_analytic.py  dispersion_nb_4species.py  dispersion_npz_EF.py  distribution_animate.py  distributionfunc.py  energy_compare_alpha.py  energy_compare_alpha_max.py  energy_compare_alpha_time.py  energy_compare_beta.py  energy_compare_velocity.py  energy_compare_velocity_max.py  energy_plots.py  fft.py  ffttest.py  fixed_time.py  gd1.py  growdecay.py  ke.py  ke_plot.py  ke_test.py  landau.py  (+30 more)
src/: collision.cpp  cross_section.cpp  dft.cpp  domain.cpp  field.cpp  iniparser.cpp  init.cpp  main.cpp  output.cpp  species.cpp  test.cpp  world.cpp
